--- a/web/index.html
+++ b/web/index.html
@@ -21,6 +21,7 @@
             <input id="text" type="text" />
             <input type="submit" />
         </form>
+        <div id="channel-stati"> </div>
         <table class="table table-striped" > <tbody id="lightSchedule-content"> </tbody> </table>
         <div id="settings-content"> </div>
 
