--- a/web/index.html
+++ b/web/index.html
@@ -17,13 +17,7 @@
             </div>
         </div>
 
-
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                <span class="sr-only">70% Complete</span>
-            </div>
-        </div>
-<br /><br />
+        <br /><br />
 
         <div id="channel-statuses">
             <div id="0" class="row">
@@ -77,10 +71,12 @@
 
         <div id="light-schedule">
             <h3> Schedule </h3>
-            <table class="table table-striped">
+            <table class="table table-striped table-responsive">
                 <tbody id="lightSchedule-content"> </tbody>
             </table>
+            <canvas id="myChart" width="400" height="200"></canvas>
         </div>
+
 
         <div id="settings">
             <h3>Settings</h3>
@@ -145,6 +141,7 @@
     crossorigin="anonymous"></script>
 <script src="http://cdn.jsdelivr.net/sockjs/0.3/sockjs.min.js"></script>
 <script src="web/js/bootstrap-switch.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
 <script src="web/js/whet.js"></script>
 
 </html>
