added time to UI. add channels 2 and 3 to the graph

--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@
             <div>
                 <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status: <span id="status">disconnected</span>
             </div>
+            <div id="time"> </div>
         </div>
 
         <br /><br />
@@ -71,10 +72,10 @@
 
         <div id="light-schedule">
             <h3> Schedule </h3>
+            <canvas id="myChart" width="400" height="100"></canvas>
             <table class="table table-striped table-responsive">
                 <tbody id="lightSchedule-content"> </tbody>
             </table>
-            <canvas id="myChart" width="400" height="200"></canvas>
         </div>
 
 
