--- a/web/index.html
+++ b/web/index.html
@@ -11,49 +11,56 @@
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1>Whet</h1>
-            <div>
+            <h1 class="display-3">Whet</h1>
+            <hr class="my-4">
                 <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status: <span id="status">disconnected</span>
-            </div>
-            <div id="time"> </div>
+                <p id="time"> </p>
+            </hr>
+            
         </div>
-
-        <br /><br />
 
         <div id="channel-statuses">
             <div id="0" class="row">
                 <div class="channel-id col-2">text</div>
                 <div class="pwm-value col-2">text</div>
-                <div class="progress col-8">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                        <span class="progress-text">70%</span>
+                <div class="col-8">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                            <span class="progress-text">70%</span>
+                        </div>
                     </div>
                 </div>
             </div>
             <div id="1" class="row">
                 <div class="channel-id col-2">text</div>
                 <div class="pwm-value col-2">text</div>
-                <div class="progress col-8">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                        <span class="progress-text">70%</span>
+                <div class="col-8">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                            <span class="progress-text">70%</span>
+                        </div>
                     </div>
                 </div>
             </div>
             <div id="2" class="row">
                 <div class="channel-id col-2">text</div>
                 <div class="pwm-value col-2">text</div>
-                <div class="progress col-8">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                        <span class="progress-text">70%</span>
+                <div class="col-8">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                            <span class="progress-text">70%</span>
+                        </div>
                     </div>
                 </div>
             </div>
             <div id="3" class="row">
                 <div class="channel-id col-2">text</div>
                 <div class="pwm-value col-2">text</div>
-                <div class="progress col-8">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                        <span class="progress-text">70%</span>
+                <div class="col-8">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                            <span class="progress-text">70%</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -62,9 +69,11 @@
                 <div class="pwm-value col-2">
                     <p>text <span class="glyphicon glyphicon-arrow-up"></span></p>
                 </div>
-                <div class="progress col-8">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-                        <span class="progress-text">100%</span>
+                <div class="col-8">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                            <span class="progress-text">100%</span>
+                        </div>
                     </div>
                 </div>
             </div>
