work on jsonedit

--- a/web/index.html
+++ b/web/index.html
@@ -13,11 +13,12 @@
         <div class="jumbotron">
             <h1 class="display-3">Whet</h1>
             <hr class="my-4">
-                <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status: <span id="status">disconnected</span>
-                <p id="time"> </p>
+            <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status: <span id="status">disconnected</span>
+            <p id="time"> </p>
             </hr>
-            
         </div>
+
+        <div id="nav"> <a href="/">home</a><a href="web/edit.html">edit</a> </div>
 
         <div id="channel-statuses">
             <div id="0" class="row">
@@ -95,7 +96,6 @@
 
 
 
-
         <div class="form-group">
             <h3>Log</h3>
             <div id="log" style="width: 60em; height: 20em; overflow:auto; border: 1px solid black">
@@ -152,6 +152,7 @@
 <script src="http://cdn.jsdelivr.net/sockjs/0.3/sockjs.min.js"></script>
 <script src="web/js/bootstrap-switch.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
+<script src="web/js/jsonedit.js"></script>
 <script src="web/js/whet.js"></script>
 
 </html>
