New cool stuff with json-editor

--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
         crossorigin="anonymous">
-    <link href="web/css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
+    <link href="css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
 
 </head>
 
@@ -18,7 +18,7 @@
             </hr>
         </div>
 
-        <div id="nav"> <a href="/">home</a><a href="web/edit.html">edit</a> </div>
+        <div id="nav"> <a href="/">home</a><a href="edit.html">edit</a> </div>
 
         <div id="channel-statuses">
             <div id="0" class="row">
@@ -150,9 +150,9 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
     crossorigin="anonymous"></script>
 <script src="http://cdn.jsdelivr.net/sockjs/0.3/sockjs.min.js"></script>
-<script src="web/js/bootstrap-switch.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
-<script src="web/js/jsonedit.js"></script>
-<script src="web/js/whet.js"></script>
+<script src="js/bootstrap-switch.js"></script>
+<script src="js/jsonedit.js"></script>
+<script src="js/whet.js"></script>
 
 </html>
