--- a/web/edit.html
+++ b/web/edit.html
@@ -2,24 +2,102 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
+    <link href="css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
 
 </head>
 
 <body>
-    HELLO WORLD
     <div class="container">
         <div class="jumbotron">
             <h1 class="display-3">Whet</h1>
             <hr class="my-4">
-                <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status: <span id="status">disconnected</span>
-                <p id="time"> </p>
+            <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status: <span id="status">disconnected</span>
+            <p id="time"> </p>
             </hr>
-            
         </div>
-        <div id="nav"> <a href="/">home</a><a href="web/edit.html">edit</a> </div>
-        <div id="editor_holder"></div>
+
+        <div id="nav"> <a href="/">home</a><a href="edit.html">edit</a> </div>
+
+        <div id="channel-statuses">
+            <div id="0" class="row">
+                <div class="channel-id col-2">text</div>
+                <div class="pwm-value col-2">text</div>
+                <div class="col-8">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                            <span class="progress-text">70%</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="1" class="row">
+                <div class="channel-id col-2">text</div>
+                <div class="pwm-value col-2">text</div>
+                <div class="col-8">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                            <span class="progress-text">70%</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="2" class="row">
+                <div class="channel-id col-2">text</div>
+                <div class="pwm-value col-2">text</div>
+                <div class="col-8">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                            <span class="progress-text">70%</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="3" class="row">
+                <div class="channel-id col-2">text</div>
+                <div class="pwm-value col-2">text</div>
+                <div class="col-8">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                            <span class="progress-text">70%</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="4" class="row">
+                <div class="channel-id col-2">dummy</div>
+                <div class="pwm-value col-2">
+                    <p>text <span class="glyphicon glyphicon-arrow-up"></span></p>
+                </div>
+                <div class="col-8">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                            <span class="progress-text">100%</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="light-schedule">
+            <h3> Schedule </h3>
+            <canvas id="myChart" width="400" height="100"></canvas>
+            <table class="table table-striped table-responsive">
+                <tbody id="lightSchedule-content"> </tbody>
+            </table>
+        </div>
+
+
+        <div id="settings">
+            <h3>Settings</h3>
+            <div id="settings-content"></div>
+        </div>
+
+
+        <div id="editor_holder"> </div>
+
+
 
     </div>
 </body>
@@ -29,12 +107,10 @@
     crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
     crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-    crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="http://cdn.jsdelivr.net/sockjs/0.3/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
 <script src="js/jsonedit.js"></script>
-<script src="js/whet.js"></script>
-
+<script src="js/whet.edit.js"></script>
 
 </html>
