--- a/web/edit.html
+++ b/web/edit.html
@@ -18,67 +18,7 @@
             </hr>
         </div>
 
-        <div id="nav"> <a href="/">home</a><a href="edit.html">edit</a> </div>
-
-        <div id="channel-statuses">
-            <div id="0" class="row">
-                <div class="channel-id col-2">text</div>
-                <div class="pwm-value col-2">text</div>
-                <div class="col-8">
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                            <span class="progress-text">70%</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="1" class="row">
-                <div class="channel-id col-2">text</div>
-                <div class="pwm-value col-2">text</div>
-                <div class="col-8">
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                            <span class="progress-text">70%</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="2" class="row">
-                <div class="channel-id col-2">text</div>
-                <div class="pwm-value col-2">text</div>
-                <div class="col-8">
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                            <span class="progress-text">70%</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="3" class="row">
-                <div class="channel-id col-2">text</div>
-                <div class="pwm-value col-2">text</div>
-                <div class="col-8">
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                            <span class="progress-text">70%</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="4" class="row">
-                <div class="channel-id col-2">dummy</div>
-                <div class="pwm-value col-2">
-                    <p>text <span class="glyphicon glyphicon-arrow-up"></span></p>
-                </div>
-                <div class="col-8">
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-                            <span class="progress-text">100%</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div id="nav"> <a href="index.html">home</a><a href="edit.html">edit</a> </div>
 
         <div id="light-schedule">
             <h3> Schedule </h3>
@@ -111,6 +51,7 @@
 <script src="http://cdn.jsdelivr.net/sockjs/0.3/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
 <script src="js/jsonedit.js"></script>
+<script src="js/whet.js"></script>
 <script src="js/whet.edit.js"></script>
 
 </html>
