--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,21 @@
             </hr>
         </div>
 
-        <div id="nav"> <a href="/">home</a><a href="edit.html">edit</a> </div>
+        <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+            <a class="navbar-brand" href="#">Navbar</a>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="edit.html">Light Schedule</a>
+                    <a class="nav-item nav-link" href="#">Settings</a>
+                    <a class="nav-item nav-link disabled" href="#">Disabled</a>
+                </div>
+            </div>
+        </nav>
 
         <div id="channel-statuses">
             <div id="0" class="row">
