--- a/web/index.html
+++ b/web/index.html
@@ -2,13 +2,16 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
         crossorigin="anonymous">
     <link href="css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
 
 </head>
 
-<body>
+<body style="font-size:18px">
     <div class="container">
         <div class="jumbotron">
             <h1 class="display-3">Whet</h1>
@@ -36,8 +39,8 @@
 
         <div id="channel-statuses">
             <div id="0" class="row">
-                <div class="channel-id col-2">text</div>
-                <div class="pwm-value col-2">text</div>
+                <div class="channel-id col-1">text</div>
+                <div class="pwm-value col-3">text</div>
                 <div class="col-8">
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -47,8 +50,8 @@
                 </div>
             </div>
             <div id="1" class="row">
-                <div class="channel-id col-2">text</div>
-                <div class="pwm-value col-2">text</div>
+                <div class="channel-id col-1">text</div>
+                <div class="pwm-value col-3">text</div>
                 <div class="col-8">
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -58,8 +61,8 @@
                 </div>
             </div>
             <div id="2" class="row">
-                <div class="channel-id col-2">text</div>
-                <div class="pwm-value col-2">text</div>
+                <div class="channel-id col-1">text</div>
+                <div class="pwm-value col-3">text</div>
                 <div class="col-8">
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -69,8 +72,8 @@
                 </div>
             </div>
             <div id="3" class="row">
-                <div class="channel-id col-2">text</div>
-                <div class="pwm-value col-2">text</div>
+                <div class="channel-id col-1">text</div>
+                <div class="pwm-value col-3">text</div>
                 <div class="col-8">
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -80,8 +83,8 @@
                 </div>
             </div>
             <div id="4" class="row">
-                <div class="channel-id col-2">dummy</div>
-                <div class="pwm-value col-2">
+                <div class="channel-id col-1">dummy</div>
+                <div class="pwm-value col-3">
                     <p>text <span class="glyphicon glyphicon-arrow-up"></span></p>
                 </div>
                 <div class="col-8">
