--- a/web/edit.html
+++ b/web/edit.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-    <link href="css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
-
-</head>
+        <link href="/web/css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
+    
+    </head>
 
 <body>
     <div class="container">
@@ -18,11 +21,46 @@
             </hr>
         </div>
 
-        <div id="nav"> <a href="index.html">home</a><a href="edit.html">edit</a> </div>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Whet</a>
+              </div>
+              <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                  <li><a href="/web/">Home</a></li>
+                  <li class="active"><a href="edit.html">Light Schedule</a></li>
+                  <li><a href="#">Settings</a></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="#">Action</a></li>
+                      <li><a href="#">Another action</a></li>
+                      <li><a href="#">Something else here</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li class="dropdown-header">Nav header</li>
+                      <li><a href="#">Separated link</a></li>
+                      <li><a href="#">One more separated link</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                  <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
+                  <li><a href="../navbar-static-top/">Static top</a></li>
+                  <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+                </ul>
+              </div><!--/.nav-collapse -->
+            </div><!--/.container-fluid -->
+          </nav>
 
         <div id="light-schedule">
-            <h3> Schedule </h3>
-            <canvas id="myChart" width="400" height="100"></canvas>
+            <canvas id="myChart" height="200"></canvas>
             <table class="table table-striped table-responsive">
                 <tbody id="lightSchedule-content"> </tbody>
             </table>
@@ -30,7 +68,6 @@
 
 
         <div id="settings">
-            <h3>Settings</h3>
             <div id="settings-content"></div>
         </div>
 
@@ -50,8 +87,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="http://cdn.jsdelivr.net/sockjs/0.3/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
-<script src="js/jsonedit.js"></script>
-<script src="js/whet.js"></script>
-<script src="js/whet.edit.js"></script>
+<script src="/web/js/jsonedit.js"></script>
+<script src="/web/js/whet.js"></script>
+<script src="/web/js/whet.edit.js"></script>
 
 </html>
