make dummy progress bar invisible for now

--- a/web/index.html
+++ b/web/index.html
@@ -60,7 +60,7 @@
           </nav>
 
         <div id="channel-statuses">
-            <div id="99" class="row">
+            <div id="99" class="row invisible">
                 <div class="channel-id col-1">dummy</div>
                 <div class="pwm-value col-3">
                     <p>text <span class="glyphicon glyphicon-arrow-up"></span></p>
