removed a bunch of redundent js and fixed the log window style to be responsive

--- a/web/edit.html
+++ b/web/edit.html
@@ -67,11 +67,6 @@
         </div>
 
 
-        <div id="settings">
-            <div id="settings-content"></div>
-        </div>
-
-
         <div id="editor_holder"> </div>
 
 
@@ -87,6 +82,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="http://cdn.jsdelivr.net/sockjs/0.3/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
+<script src="/web/js/bootstrap-switch.js"></script>
 <script src="/web/js/jsonedit.js"></script>
 <script src="/web/js/whet.js"></script>
 <script src="/web/js/whet.edit.js"></script>
