--- a/web/index.html
+++ b/web/index.html
@@ -93,7 +93,7 @@
 
         <div class="form-group">
             <h3>Log</h3>
-            <div id="log" style="width: 60em; height: 20em; overflow:auto; border: 1px solid black">
+            <div id="log" style="height: 20em; overflow:auto; border: 1px solid black"></div>
             </div>
             <form id="chatform">
                 <input id="text" type="text" class="form-control" />
