--- a/web/preview.html
+++ b/web/preview.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
+        crossorigin="anonymous">
     <link href="/web/css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
+    <link href="/web/css/whet.css" rel="stylesheet">
 
 </head>
 
@@ -15,7 +16,8 @@
         <div class="jumbotron">
             <h1 class="display-3">Whet</h1>
             <hr class="my-4">
-            <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status: <span id="status">disconnected</span>
+            <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status:
+            <span id="status">disconnected</span>
             <p id="time"> </p>
             </hr>
         </div>
@@ -33,10 +35,10 @@
               </div>
               <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="/web/">Home</a></li>
                   <li><a href="edit.html">Light Schedule</a></li>
                   <li><a href="#">Settings</a></li>
-                  <li><a href="preview.html">Preview</a></li>
+                  <li class="active"><a href="preview.html">Preview</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
@@ -63,64 +65,8 @@
             </div>
         </div>
 
-        <div id="light-schedule">
-            <h3> Schedule </h3>
-            <canvas id="myChart" width="400" height="200"></canvas>
-            <table class="table table-striped table-responsive">
-                <tbody id="lightSchedule-content"> </tbody>
-            </table>
-        </div>
+        <div id="editor_holder"> </div>
 
-
-        <div id="settings">
-            <h3>Settings</h3>
-            <div id="settings-content"></div>
-        </div>
-
-
-
-        <div class="form-group">
-            <h3>Log</h3>
-            <div id="log" style="height: 20em; overflow:auto; border: 1px solid black"></div>
-            </div>
-            <form id="chatform">
-                <input id="text" type="text" class="form-control" />
-                <input type="submit" class="form-control" />
-            </form>
-        </div>
-
-        <div id="protocols" class="invisible">
-            <ul class="list-group">
-                <li class="list-group-item">
-                    <input id="websocket" type="checkbox" value="websocket" checked="checked"></input>
-                    <label for="websocket">websocket</label>
-                </li>
-                <li class="list-group-item">
-                    <input id="xhr-streaming" type="checkbox" value="xhr-streaming" checked="checked"></input>
-                    <label for="xhr-streaming">xhr-streaming</label>
-                </li>
-                <li class="list-group-item">
-                    <input id="iframe-eventsource" type="checkbox" value="iframe-eventsource" checked="checked"></input>
-                    <label for="iframe-eventsource">iframe-eventsource</label>
-                </li>
-                <li class="list-group-item">
-                    <input id="iframe-htmlfile" type="checkbox" value="iframe-htmlfile" checked="checked"></input>
-                    <label for="iframe-htmlfile">iframe-htmlfile</label>
-                </li>
-                <li class="list-group-item">
-                    <input id="xhr-polling" type="checkbox" value="xhr-polling" checked="checked"></input>
-                    <label for="xhr-polling">xhr-polling</label>
-                </li>
-                <li class="list-group-item">
-                    <input id="iframe-xhr-polling" type="checkbox" value="iframe-xhr-polling" checked="checked"></input>
-                    <label for="iframe-xhr-polling">iframe-xhr-polling</label>
-                </li>
-                <li class="list-group-item">
-                    <input id="jsonp-polling" type="checkbox" value="jsonp-polling" checked="checked"></input>
-                    <label for="jsonp-polling">jsonp-polling</label>
-                </li>
-            </ul>
-        </div>
 
     </div>
 </body>
@@ -130,11 +76,13 @@
     crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
     crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
 <script src="http://cdn.jsdelivr.net/sockjs/0.3/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
 <script src="/web/js/bootstrap-switch.js"></script>
 <script src="/web/js/jsonedit.js"></script>
 <script src="/web/js/whet.js"></script>
+<script src="/web/js/whet.preview.js"></script>
 
 </html>
