add settings to own tab

--- a/web/settings.html
+++ b/web/settings.html
@@ -8,6 +8,7 @@
         crossorigin="anonymous">
     <link href="/web/css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
 
+
 </head>
 
 <body style="font-size:18px">
@@ -21,20 +22,13 @@
             </hr>
         </div>
 
-        <nav class="navbar navbar-default">
-        </nav>
+        <nav class="navbar navbar-default"> </nav>
 
-        <div id="light-schedule">
-            <canvas id="myChart" width="400" height="200"></canvas>
-            <table class="table table-striped table-responsive">
-                <tbody id="lightSchedule-content"> </tbody>
-            </table>
+     
+        <div id="settings">
+            <h3>Settings</h3>
+            <div id="settings-content"></div>
         </div>
-
-
-        <div id="editor_holder"> </div>
-
-
 
     </div>
 </body>
@@ -49,9 +43,8 @@
 <script src="http://cdn.jsdelivr.net/sockjs/0.3/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
 <script src="/web/js/bootstrap-switch.js"></script>
-<script src="/web/js/jsonedit.js"></script>
 <script src="/web/js/handlebars-v4.0.10.js"></script>
+<script src="/web/js/jsonedit.js"></script>
 <script src="/web/js/whet.js"></script>
-<script src="/web/js/whet.edit.js"></script>
 
 </html>
