--- a/web/preview.html
+++ b/web/preview.html
@@ -21,51 +21,7 @@
             </hr>
         </div>
 
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                        aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Whet</a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a href="/web/">Home</a>
-                        </li>
-                        <li>
-                            <a href="edit.html">Light Schedule</a>
-                        </li>
-                        <li>
-                            <a href="#">Settings</a>
-                        </li>
-                        <li class="active">
-                            <a href="preview.html">Preview</a>
-                        </li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="active">
-                            <a href="./">Default
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../navbar-static-top/">Static top</a>
-                        </li>
-                        <li>
-                            <a href="../navbar-fixed-top/">Fixed top</a>
-                        </li>
-                    </ul>
-                </div>
-                <!--/.nav-collapse -->
-            </div>
-            <!--/.container-fluid -->
-        </nav>
+        <nav class="navbar navbar-default"></nav>
 
         <div id="channel-statuses"></div>
         <div id="editor_holder"> </div>
