--- a/web/edit.html
+++ b/web/edit.html
@@ -21,8 +21,7 @@
             </hr>
         </div>
 
-        <nav class="navbar navbar-default">
-        </nav>
+        <nav class="navbar navbar-default"></nav>
 
         <div id="light-schedule">
             <canvas id="myChart" width="400" height="200"></canvas>
