--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,7 @@
             <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status:
             <span id="status">disconnected</span>
             <p id="time"> </p>
+
             </hr>
         </div>
 
@@ -36,17 +37,8 @@
 
 
 
+        <div id="ws-messages"> </div>
 
-
-        <div class="form-group">
-            <h3>Log</h3>
-            <div id="log" style="height: 20em; overflow:auto; border: 1px solid black"></div>
-        </div>
-        <form id="chatform">
-            <input id="text" type="text" class="form-control" />
-            <input type="submit" class="form-control" />
-        </form>
-    </div>
 
     </div>
 </body>
