settings ui working

--- a/web/settings.html
+++ b/web/settings.html
@@ -24,11 +24,10 @@
 
         <nav class="navbar navbar-default"> </nav>
 
-     
-        <div id="settings">
-            <h3>Settings</h3>
-            <div id="settings-content"></div>
+        <div id="settings-editor">
+                <button id="settings-submit" type="button" class="btn btn-primary">Update</button>
         </div>
+        
 
     </div>
 </body>
@@ -46,5 +45,6 @@
 <script src="/web/js/handlebars-v4.0.10.js"></script>
 <script src="/web/js/jsonedit.js"></script>
 <script src="/web/js/whet.js"></script>
+<script src="/web/js/whet.settings.js"></script>
 
 </html>
