New UI for outlet

--- a/web/outlet.html
+++ b/web/outlet.html
@@ -12,11 +12,9 @@
     <div class="container">
 
         <div id="top"> </div>
-        <nav class="navbar navbar-default"> </nav>
-
-        <div id="settings-editor">
-            <button id="submit-button" type="button" class="btn btn-primary">Update</button>
-        </div>
+        <nav class="navbar navbar-default"></nav>
+        <button id="submit-button" type="button" class="btn btn-primary">Update</button>
+        <div id="editor_holder"> </div>
 
 
     </div>
@@ -32,9 +30,9 @@
 <script src="https://cdn.jsdelivr.net/sockjs/0.3/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
 <script src="/web/js/bootstrap-switch.js"></script>
-<script src="/web/js/handlebars-v4.0.10.js"></script>
 <script src="/web/js/jsonedit.js"></script>
+<script src="/web/js/handlebars-v4.0.10.js"></script>
 <script src="/web/js/whet.js"></script>
-<script src="/web/js/whet.settings.js"></script>
+<script src="/web/js/whet.outlet.js"></script>
 
 </html>
