submit button for light schedule

--- a/web/edit.html
+++ b/web/edit.html
@@ -22,7 +22,7 @@
             </table>
         </div>
 
-
+        <button id="submit-button" type="button" class="btn btn-primary">Update</button>
         <div id="editor_holder"> </div>
 
 
