trying to get outlet statuses in webview

--- a/web/outlet.html
+++ b/web/outlet.html
@@ -13,6 +13,7 @@
 
         <div id="top"> </div>
         <nav class="navbar navbar-default"></nav>
+        <div id="outlet-statuses"></div>
         <button id="submit-button" type="button" class="btn btn-primary">Update</button>
         <div id="editor_holder"> </div>
 
