ui outlet status

--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@
         <nav class="navbar navbar-default"> </nav>
 
         <div id="channel-statuses"> </div>
+        <div id="outlet-statuses" class="row"></div>
 
         <div id="light-schedule">
             <h3> Schedule </h3>
