--- a/web/outlet.html
+++ b/web/outlet.html
@@ -13,8 +13,10 @@
 
         <div id="top"> </div>
         <nav class="navbar navbar-default"></nav>
-        <div id="outlet-statuses"></div>
-        <button id="submit-button" type="button" class="btn btn-primary">Update</button>
+        <div id="outlet-statuses" class="row"></div>
+
+
+        <div> <button id="submit-button" type="button" class="btn btn-primary">Update</button> </div>
         <div id="editor_holder"> </div>
 
 
