--- a/web/outlet.html
+++ b/web/outlet.html
@@ -13,11 +13,11 @@
 
         <div id="top"> </div>
         <nav class="navbar navbar-default"></nav>
-        <div id="outlet-statuses" class="row"></div>
+        <div id="outlet-statuses"></div>
 
 
-        <div> <button id="submit-button" type="button" class="btn btn-primary">Update</button> </div>
-        <div id="editor_holder"> </div>
+        <div class='col-xs-12'><button id="submit-button" type="button" class="btn btn-primary">Update</button> </div>
+        <div class='col-xs-12' id="editor_holder"> </div>
 
 
     </div>
