frontend support runmode status

--- a/web/index.html
+++ b/web/index.html
@@ -14,9 +14,9 @@
 
         <nav class="navbar navbar-default"> </nav>
 
-        <div id="overview-statuses">
-            <div id='temperature-status' class='col-xs-4'>00&#8457;</div> 
-            <div id='weather-status' class='col-xs-4'>weather:normal</div>
+        <div id="overview-statuses" class='row'>
+            <div id='temperature-status' class='col-xs-4'></div> 
+            <div id='runmode-status' class='col-xs-4'></div>
             <div id='fan-status' class-'col-xs-4'></div>
         </div>
 
