Db stuff and guages

--- a/web/index.html
+++ b/web/index.html
@@ -30,14 +30,14 @@
 
 
         <div class='row'>
-            <div class="col-xs-12 col-md-4 col-lg-4">
-                <canvas id="chart-doughnut-fans" width="878" height="328"></canvas>
+            <div class="col-xs-6 col-md-4 col-lg-4">
+                <canvas id="chart-doughnut-fans" ></canvas>
             </div>
-            <div class="col-xs-12 col-md-4 col-lg-4">
-                <canvas id="chart-doughnut-watts" width="878" height="328"></canvas>
+            <div class="col-xs-6 col-md-4 col-lg-4">
+                <canvas id="chart-doughnut-watts" ></canvas>
             </div>
-            <div class="col-xs-12 col-md-4 col-lg-4">
-                <canvas id="chart-doughnut-temperature" width="878" height="328"></canvas>
+            <div class="col-xs-6 col-md-4 col-lg-4">
+                <canvas id="chart-doughnut-temperature" ></canvas>
             </div>
         </div>
 
